# 3DGPM-Notes-2023-2024

./: .gitignore  README.md
LateX Notes/: main.tex
LateX Notes/Appendix/: 1-Elemental Geometry Concepts.tex  2-Elementar Equations.tex
LateX Notes/Chapters/: 1-Representing Surfaces.tex
exercises/_meshes/: grid.off  grid900.off  grid_4x4.off  torus_hole.off  torus_iso.off  torus_uneven.off
exercises/_vcglib/apps/sample/trimesh_color/: CMakeLists.txt
exercises/es1/: CMakeLists.txt  trimesh_base.cpp
exercises/es2/: CMakeCache.txt  CMakeLists.txt  Makefile  amhzzzz.off  cmake_install.cmake  es2  es2.cpp  test.obj.mtl
exercises/es3/: CMakeLists.txt  es3.cpp
exercises/es4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  es4.cpp  new  new.cpp
exercises/es5/: sampling.cpp
